# 3D-Renderer

./: .gitmodules  README.md
Engine/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  renderer.cpp  renderer.h  screen.cpp  screen.h  triangle.cpp  triangle.h  world.cpp  world.h
